--- a/css/style.css
+++ b/css/style.css
@@ -163,13 +163,10 @@ header{
 .med-col img{
     display: block;
     max-width: 300px;
-
+    
 }
 
 /* Section Information */
-
-.information .container{
-}
 
 .information{
     background-color: var(--Section-color);
@@ -184,6 +181,23 @@ header{
     gap: 20px;
     flex-basis: calc(100% / 2 - 40px);
 }
+
+.information p{
+    line-height: 25px;
+    padding: 20px 0;
+    margin-bottom: 20px;
+}
+
+.information a{
+    background-color: var(--Section-color);
+    color: black;
+    width: 50px;
+    padding: 20px 20px;
+    border-radius: 50%;
+}
+
+/* Information Large col */
+
 .information .large-col{
     display: flex;
     flex-direction: column;
@@ -202,6 +216,13 @@ header{
 }
 
 
+.information .large-col h2{
+    color: white;
+    font-size: 30px;
+}
+
+/* Information Small Col */
+
 .information .small-col{
     display: flex;
     flex-direction: column;
@@ -209,37 +230,107 @@ header{
     align-items: center;
     width: 500px;
     text-align: center;
-    padding: 10px;
+    padding: 50px 0px;
 } 
 
 .small-col-content{
     background-color: white;
     border-radius: 50px;
-    padding: 100px 0px;
+    padding: 80px 60px;
 }
 
 .information img{
     max-width: 200px;
-}
-
-
-
-.information .large-col h2{
-    color: white;
-    font-size: 30px;
-}
-
-.information p{
-    line-height: 25px;
-    padding: 20px 0;
     margin-bottom: 20px;
 }
 
-.information a{
-    background-color: var(--Section-color);
-    color: black;
-    width: 50px;
-    padding: 15px 15px;
-    border-radius: 50px;
+
+/* Section Testimonials */
+
+.testimonials .container{
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
+.testimonials  .row{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.testimonials .col-title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 20px;
+    padding: 40px 10px;
+}
+.testimonials .col{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+    padding: 40px 10px;
+    background-color: var(--Section-color);
+    color: white;
+}
+
+.testimonials .col-title h2{
+    font-size: 40px;
+    padding: 30px;
+    color: var(--Section-color);
+}
+
+
+.testimonial{
+    display: flex;
+    flex-direction: row;
+}
+
+/* Testimonial circle img */
+
+
+.img-circle{
+    display: inline-block;
+    position: relative;
+    width: 400px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.testimonial img {
+    width: auto;
+    height: 100%;
+    margin-left: -40px;
+}
+
+/* Testimonial Content */
+
+.testimonial .testimonial-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0px 20px;
+}
+
+.testimonial p{
+    line-height: 30px;
+    font-size: 18px;
+    text-align: left;
+    margin-bottom: 30px;
+}
+
+.testimonial-content h2{
+    font-size: 20px;
+}
