--- a/css/style.css
+++ b/css/style.css
@@ -419,7 +419,97 @@ header{
     margin-bottom: 20px;
 }
 
+/* Section our team */
 
+.our-team .container{
+    padding: 50px;
+    margin-top: 20px;
+}
+
+.our-team .row{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 200px;
+}
+
+/* Large col */
+
+.our-team .large-col{
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    text-align: left;
+    padding: 40px 20px;
+}
+
+.our-team h2{
+    color: var(--Section-color);
+    font-size: 50px;
+    font-weight: bolder;
+    margin-bottom: 20px;
+}
+
+.our-team p{
+    margin-bottom: 20px;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+
+/* Small col */
+
+.our-team .small-col{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 300px;
+    text-align: left;
+    font-size: 20px;
+    font-weight: bolder;
+    color: var(--Section-color);
+    padding: 40px 20px;
+}
+
+
+
+.our-team .small-col .btn-violet{
+    color: white;
+    background-color: var(--Section-color);
+    border-radius: 20px;
+    width: 250px;
+    font-size: 18px;
+    margin-top: 20px;
+    text-decoration: none;
+    padding: 10px 10px;
+    text-align: center;
+    color: white;
+}
+
+.our-team i{
+    margin-right: 10px;
+}
+
+.our-team .small-col p{
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+
+.our-team .img-circle{
+    display: inline-block;
+    position: relative;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.our-team img {
+    width: auto;
+    height: 100%;
+}
 
 /* Footer */
 footer{
