--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,22 @@ header{
     padding: 10px;
 }
 
+.button-menu{
+    display: flex;
+    flex-direction: column;
+    display: none;
+}
+.line{
+    margin-bottom: 5px;
+    width: 40px;
+    padding: 3px;
+    background-color: white;
+}
+
+
+
+
+
 /* Section About us */
 
 .container{
@@ -83,7 +99,7 @@ header{
     flex-wrap: wrap;
     align-items: center;
     gap: 20px;
-    flex-basis: calc(100% / 3 - 40px);
+    flex-basis: calc(100% / 3);
 }
 .about-us .col{
     display: flex;
@@ -436,7 +452,6 @@ header{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 200px;
 }
 
 /* Large col */
@@ -640,3 +655,186 @@ footer a{
 
 
 /* RESPONSIVE */
+
+/* @media screen and (max-width: 1200px) { */
+
+
+/* MAX WIDTH 768PX */
+
+  @media screen and (max-width: 768px) {
+
+    /* Header */
+
+    .button-menu{
+        display: block;
+    }
+
+    ul{
+        display: none;
+    }
+
+    .navigation-menu{
+        display: flex;
+        padding: 10px 30px;
+        justify-content: space-between;
+    }
+
+    /* Section About Us */
+
+    .about-us{
+        padding: 20px;
+    }
+
+    .about-us .row{
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
+
+    .about-us .small-col{
+        display: flex;
+        flex-direction: column;
+        width: 500px;
+        margin-right: 100px;
+    }
+
+    .about-us .med-col{
+        width: 200px;
+        padding: 0px 10px;
+    }
+
+    .about-us .big-col{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-us .big-col{
+        width: 460px;
+    }
+
+    .about-us .col{
+        width: 30%;
+        display: flex;
+        align-items: center;
+        padding: 30px 20px;
+    }
+
+    .about-us .col:nth-child(2){
+        padding: 130px 20px;
+    }
+
+    .about-us img{
+        position: relative;
+        top: 0px;
+        right: 80px;
+    }
+
+    /* Section Information */
+
+    .information .large-col{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 700px;
+        padding: 50px 0px;
+    }
+    
+    .information .large-col-content h2{
+        font-size: 60px;
+    }
+    
+    .information .large-col img{
+        max-width: 700px;
+        margin-bottom: 100px;
+    }
+   
+    
+    .small-col-content{
+        background-color: white;
+        border-radius: 50px;
+        padding: 80px 60px;
+    }
+    
+    .information img{
+        max-width: 600px;
+        margin-bottom: 20px;
+    }
+
+    /* Section Testimonials */
+
+    .testimonials .col{
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        border-radius: 50px;
+        text-align: center;
+        font-size: 20px;
+        margin-bottom: 20px;
+        padding: 40px 10px;
+        background-color: var(--Section-color);
+        color: white;
+    }
+
+    .img-circle{
+        display: inline-block;
+        position: relative;
+        width: 600px;
+        height: 200px;
+        overflow: hidden;
+        border-radius: 50%;
+    }
+    
+    .testimonial img {
+        width: auto;
+        height: 100%;
+        margin-left: -70px;
+    }
+
+    .testimonials .col-title {
+        padding: 20px 20px;
+    }
+
+    /* Section Benefits */
+    
+    .benefits .col{
+        width: 350px;
+    }
+
+    /* Sectiona Our team */
+    
+    .our-team .container{
+        padding: 0px;
+        width: 100%;
+    }
+
+    .our-team{
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+
+    .our-team .large-col{
+        width: 400px;
+        font-size: 10px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 20px;
+        margin-right: 20px;
+        line-height: 40px;
+    }
+
+    .our-team .small-col{
+        padding: 20px 10px;
+        display: flex;
+        justify-content: flex-start;
+    }
+}
+
+/* MAX WIDTH 576PX */
+
+@media screen and (max-width: 576px) {
+    .container {
+      width: 100%;
+  }
+}
